# ai-studio-story

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  export_story.py  generate_audio.py  generate_cover.py  generate_thumbnail.py  pyproject.toml
.claude/agents/: audio-generator.md  cover-generator.md  thumbnail-generator.md
.claude/commands/: kidstory-export.md  kidstory-new.md  kidstory-pack.md  kidstory.md
.opencode/agents/: audio-generator.md  cover-generator.md  thumbnail-generator.md
.opencode/commands/: kidstory-continue.md  kidstory-edit.md  kidstory-export.md  kidstory-new.md  kidstory-pack.md  kidstory.md
.opencode/plans/: 1770059143783-silent-knight.md  1770065029503-glowing-meadow.md  1770065790864-crisp-cabin.md  1770102758372-misty-forest.md  1770103382769-playful-otter.md  1770112418556-quick-cactus.md
audio_generation/: __init__.py  cli.py  orchestrator.py
audio_generation/audio/: __init__.py  concatenator.py  effects.py  exporter.py  processor.py
audio_generation/batching/: __init__.py  segment_batcher.py
audio_generation/domain/: __init__.py  character_loader.py  (+2 more)
docs/: archive-format.md  audio_generation_architecture.md  llm-story-generation-prompt.md  story-json-deep-dive.md  story-templates.md  validation-rules.md  voice-guide.md
examples/: dragon-lair-chapter.md  dungeon-entrance.md  sample-audio-script-fr.md  sample-audio-script.md  simple-audio-script.md
gemini_tts/: __init__.py  cli.py  exceptions.py  models.py  voices.py
profiles/: .gitkeep
stories/: .gitkeep
tests/: __init__.py
(+83 files in other folders)
