[project]
name = "gemini-tts"
version = "1.0.0"
description = "A CLI tool to convert text to speech using Google's Gemini 2.5 TTS API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "click>=8.1.0",
    "pydub>=0.25.1",
]

[project.scripts]
gemini-tts = "gemini_tts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
