[project]
name = "ai-studio-story"
version = "1.0.0"
description = "A set of Python tool to help generate stories for Lunii device"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
